# cognitio

./: .env  Cargo.toml  README.md  rustfmt.toml
backend/: .env  Cargo.toml  Dockerfile
backend/migrations/2021-11-07-152201_task/: up.sql
backend/src/: auth.rs  errors.rs  main.rs  schema.rs
docker/: docker-compose.yaml
migrations/2021-11-07-152201_task/: down.sql  up.sql
src/: handlers.rs  main.rs  models.rs  schema.rs
