[package]
name = "cognitio"
version = "0.1.0"
authors = ["Nicola Benaglia <nico.benaz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0.0"
actix-service = "1.0.1"
actix-web = "2.0.0"
alcoholic_jwt = "1.0.0"
chrono = { version = "0.4.10", features = ["serde"] }
derive_more = "0.99.2"
diesel = { version = "1.4.2", features = ["postgres","uuidv07", "r2d2", "chrono"] }
dotenv = "0.15.0"
futures = "0.3.1"
r2d2 = "0.8.8"
reqwest = "0.9.22"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
# Add openssl-sys as a direct dependency so it can be cross compiled to
# x86_64-unknown-linux-musl using the "vendored" feature below
openssl-sys = "*"

[features]
# Force openssl-sys to staticly link in the openssl library. 
# Necessary when cross compiling to x86_64-unknown-linux-musl.
vendored = ["openssl-sys/vendored"]



